# PaperReviewer

./: main.py  process.py  pyproject.toml  requirements.txt
